force-app/main/default/objects/SFDC_Agreement__c/SFDC_Agreement__c.object-meta.xml
<CustomObject>
    <description>Agreements signed or agreed upon with Target Companies.</description>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>