force-app/main/default/objects/SFDC_Agreement__c/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date agreement was signed by someone at the acquiring company.</description>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>