force-app/main/default/objects/SFDC_Agreement__c/fields/Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>