force-app/main/default/objects/SFDC_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Draft</fullName>
                <default>true</default>
                <label>Initial Draft</label>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Signed / Agreed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>