force-app/main/default/objects/SFDC_Agreement__c/fields/Targe_Company_Date_SIgned__c.field-meta.xml
<CustomField>
    <fullName>Targe_Company_Date_SIgned__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Targe Company Date SIgned</label>
    <type>Date</type>
</CustomField>