force-app/main/default/objects/SFDC_Agreement__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <description>Agreements that signed or agreed upon with Target Companies.</description>
    <label>Target Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>