force-app/main/default/objects/SFDC_Agreement__c/fields/Target_Company_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Target_Company_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Company Signed By</label>
    <referenceTo>SFDC_Target_Company_Contact__c</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>