force-app/main/default/objects/SFDC_Agreement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Disclosure Agreement</fullName>
            </value>
            <value>
                <fullName>Term Sheet / Letter of Intent</fullName>
            </value>
            <value>
                <fullName>Exclusivity Agreement</fullName>
            </value>
            <value>
                <fullName>Definitive Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>